--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body{
    
 }
 .container1{
-  border: solid red;
+ 
     height: 100vh;
     width: 100vw;
     max-height: 100vh;
@@ -15,10 +15,10 @@ body{
     
 }
 .containerCover1{
-border: solid pink;
-height: 100vh;
-width: 100vw;
-position: absolute;
+
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
 
 
 }
@@ -44,13 +44,15 @@ position: absolute;
 
 }
 .containerCover2{
-    border: solid green;
+ 
     height: 100vh;
     width: 100vw;
     position: absolute;
+
+ 
 }
 .about{
-    border: solid chartreuse;
+   
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,10 +62,13 @@ position: absolute;
     margin-top: 10%;
     margin-left: 20%;
 
+    background-color: white;
+    box-shadow: inset -25px -25px 40px rgba(0, 0, 0, 0.5); 
+    background-image: linear-gradient(-45deg, rgba(255,255,220,.3) 0%, transparent 100%);
 
 }
 .projects{
-    border: solid chartreuse;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,10 +77,12 @@ position: absolute;
     border-radius: 50%;
     margin-left: 25%;
   
-
+    background-color: white;
+    box-shadow: inset -25px -25px 40px rgba(0, 0, 0, 0.5); 
+    background-image: linear-gradient(-45deg, rgba(255,255,220,.3) 0%, transparent 100%);
 }
 .random{
-    border: solid chartreuse;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,11 +92,16 @@ position: absolute;
     margin-left: 25%;
     margin-top: -3%;
     z-index: 2;
-
-
+    
+    background-color: white;
+    box-shadow: inset -25px -25px 40px rgba(0, 0, 0, 0.5); 
+    background-image: linear-gradient(-45deg, rgba(255,255,220,.3) 0%, transparent 100%);
+    background-image: url("/images/chaos_end.png");
+    background-position: center;
+    background-size: contain;
 }
 .contact{
-    border: solid red;
+   
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,8 +111,30 @@ position: absolute;
     margin-left: 40%;
     position: relative;
     margin-top: -7%;
-    z-index: 2
+    z-index: 2;
+    background-color: white;
+    box-shadow: inset -25px -25px 40px rgba(0, 0, 0, 0.5); 
+    background-image: linear-gradient(-45deg, rgba(255,255,220,.3) 0%, transparent 100%);
 
 }
 
+.about:hover{
+    animation: spinIt 2s ease-in;
+}
+.contact:hover{
+    animation: spinIt 2s ease-in;
+}
+.projects:hover{
+    animation: spinIt 2s ease-in;
+}
+.random:hover{
+    animation: spinIt 2s ease-in;
+}
 
+@keyframes spinIt{
+0%{ 
+    background-color: white;
+    box-shadow: inset  0 0 40px black;
+
+}
+}
