--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ body{
  
 }
 
-.about{
+#about{
    
     display: flex;
     align-items: center;
@@ -62,7 +62,7 @@ body{
     border-radius: 50%;
     margin-top: 10%;
     margin-left: 20%;
-
+    position: relative;
     background-color: white;
     box-shadow: inset -25px -25px 40px rgba(0, 0, 0, 0.5); 
     background-image: linear-gradient(-45deg, rgba(255,255,220,.3) 0%, transparent 100%);
@@ -77,12 +77,12 @@ body{
     width: 225px;
     border-radius: 50%;
     margin-left: 25%;
-  
+    position: relative;
     background-color: white;
     box-shadow: inset -25px -25px 40px rgba(0, 0, 0, 0.5); 
     background-image: linear-gradient(-45deg, rgba(255,255,220,.3) 0%, transparent 100%);
 }
-.random{
+#random{
     
     display: flex;
     align-items: center;
@@ -92,6 +92,7 @@ body{
     border-radius: 50%;
     margin-left: 25%;
     margin-top: -3%;
+    position: relative;
     z-index: 2;
     
     background-color: white;
@@ -101,7 +102,7 @@ body{
     background-position: center;
     background-size: contain;
 }
-.contact{
+#contact{
    
     display: flex;
     align-items: center;
@@ -119,16 +120,16 @@ body{
 
 }
 
-.about:hover{
+#about:hover{
     animation: spinIt 2s ease-in;
 }
-.contact:hover{
+#contact:hover{
     animation: spinIt 2s ease-in;
 }
 #projects:hover{
     animation: spinIt 2s ease-in;
 }
-.random:hover{
+#random:hover{
     animation: spinIt 2s ease-in;
 }
 
@@ -137,6 +138,64 @@ body{
 0%{ 
     background-color: white;
     box-shadow: inset  0 0 40px black;
+}
+}
+
+
+
+/* ========================================== */
+/* ========================================== */
+/* ===========  Projects 4  ================= */
+/* ========================================== */
+/* ========================================== */
+
+.continer4{
+    height: 150vh;
+    width: 100vw;
+}
+.project{
+    border: solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: solid black;
+    box-shadow: 3px 3px 3px 3px gray;
+    width: 100vw;
+    /* not delaring a height make height fit to content */
+    padding-bottom: 5%;
+    font-size: 2em;
+    
+}
+
+.imageOP{
+
+    height: 50%;
+    width: 50%;
+    min-height: 100px;
+    min-width: 100px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+.imageOfProject{
+    border: solid blue;
+    position: relative;
+    width: 50%;
+    padding-top: 50%;
+}
+.para{
+    width: 100vw;
+    background-position: fixed;
+    background-image: url("/images/josh-rose-506979-unsplash\ \(1\).jpg");
+    /* Thanks to and Photo by Josh Rose on Unsplash */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+     
 
 }
+.parainner{
+    padding: 300px;
 }
