--- a/main.css
+++ b/main.css
@@ -140,7 +140,12 @@ body{
     box-shadow: inset  0 0 40px black;
 }
 }
+.page1Links{
+    text-decoration: none;
+    color: black;
+    font-size: 1.2em;
 
+}
 
 
 /* ========================================== */
@@ -178,12 +183,38 @@ body{
     display: flex;
     align-content: center;
     justify-content: center;
+    max-height: 50%;
+    
 }
 .imageOfProject{
-    border: solid blue;
+   
     position: relative;
     width: 50%;
     padding-top: 50%;
+ 
+}
+.projectInfo{
+    
+    position: relative;
+    overflow: scroll; 
+    height: 20%;
+    width: 50%;
+    text-align: center;
+    
+    padding-top: 50%;
+    
+}
+.projectText{
+    position:  absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+    font-size: 20px;
 }
 .para{
     width: 100vw;
@@ -198,4 +229,30 @@ body{
 }
 .parainner{
     padding: 300px;
+}
+.page4projectLinks{
+    text-decoration: none;
+    color: black;
+}
+.page4projectLinks:hover{
+    text-shadow: 2px 2px 2px gray;
+}
+
+#imageOfProject1{
+    /* image courtesy of Freeart.com - art by csp_Nicemonkey */
+    background-image: url("/images/underConstruction.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#imageOfProject2{
+    /* image courtesy of iconarchive.com - art by Google */
+    background-image: url("/images/underConstruction3.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#imageOfProject3{
+    /* image courtesy of iconfinder.com - art by Turan Kent */
+    background-image: url("/images/underConstruction2.png ");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
