--- a/main.css
+++ b/main.css
@@ -122,15 +122,19 @@ body{
 
 #about:hover{
     animation: spinIt 2s ease-in;
+    font-size: large;
 }
 #contact:hover{
     animation: spinIt 2s ease-in;
+    font-size: large;
 }
 #projects:hover{
     animation: spinIt 2s ease-in;
+    font-size: large;
 }
 #random:hover{
     animation: spinIt 2s ease-in;
+    font-size: large;
 }
 
 
@@ -147,6 +151,62 @@ body{
 
 }
 
+/* ========================================== */
+/* ========================================== */
+/* ===========  contacts 3  ================= */
+/* ========================================== */
+/* ========================================== */
+
+.container3{
+height: 100vh;
+width: 100vw;
+display: flex;
+flex-direction: row;
+overflow: hidden;
+margin: 0 auto;
+
+}
+
+.main3{
+    
+    height: 100vh;
+    width: 40vw;
+    background: linear-gradient( to top left, lightgray, gray, black, lightgray, gray, black, lightgray, gray, black, lightgray, gray, black);
+    font-size: 9vw;
+    word-break: normal;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-attachment: fixed;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-weight: bolder;
+    color: white;
+   
+}
+
+.contactsBox{
+    height: 100vh;
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+   
+
+}
+.contactsCover{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+.contactsOn3:hover{
+   transform: scale(2);
+
+}
+
 
 /* ========================================== */
 /* ========================================== */
@@ -159,14 +219,11 @@ body{
     width: 100vw;
 }
 .project{
-    border: solid red;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: solid black;
-    box-shadow: 3px 3px 3px 3px gray;
     width: 100vw;
     /* not delaring a height make height fit to content */
     padding-bottom: 5%;
@@ -181,6 +238,7 @@ body{
     min-height: 100px;
     min-width: 100px;
     display: flex;
+    flex-direction: row;
     align-content: center;
     justify-content: center;
     max-height: 50%;
@@ -255,4 +313,14 @@ body{
     background-image: url("/images/underConstruction2.png ");
     background-repeat: no-repeat;
     background-size: contain;
+}
+#imageOfProject4{
+    /* gif thats to giphy.com  */
+    background-image: url("/images/birdWaving.gif");
+    background-repeat: no-repeat;
+    background-size: contain;
+
+}
+#helloText{
+    align-items: flex-start;
 }
