--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@ body{
     
 }
 .container1{
-    height: 100vh;
+    height: 150vh;
     width: 100vw;
-    max-height: 100vh;
+    max-height: 150vh;
     max-width: 100vw;
     position: absolute;
     overflow: hidden;
@@ -16,11 +16,13 @@ body{
     background-repeat: no-repeat;
 }
 .containerCover1{
-    height: 100vh;
+    height: 150vh;
     width: 100vw;
     position: absolute;
 }
-
+/* .containerCover2{
+height: 80vh;
+} */
 .firstName{
     margin-right: 10%;
     margin-top: 20vh;
@@ -97,7 +99,7 @@ body{
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    margin-left: 40%;
+    /* margin-left: 40%; */
     position: relative;
     margin-top: -7%;
     z-index: 2;
@@ -173,6 +175,27 @@ body{
     z-index: inherit;
     color: black;
     padding-top: 50px;
+}
+.textHolder{
+    padding-top: 5%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.aboutText{
+    width: 50%;
+    background-color: white;
+    position: relative;
+    z-index: 1;
+    padding: 10px;
+}
+.contactText{
+    padding: 10px;
+    width: 50%;
+    background-color: white;
+    position: relative;
+    z-index: 1;
 }
 
 /* ========================================== */
